--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -826,20 +826,24 @@
             //var reg = new RegExp("[0-9]{2}\:[0-9]{2}");
             //var timeMatch = reg.test(Time);
             var timeMatch = true;
-            if ($("#hour").val() == "שעות" || $("#minute").val() == "דקות") {
-                alert("השעה שהוזנה אינה חוקית");
-                timeMatch = false;
+            var aN = $("#afterNoon").is(':checked');
+            if (!aN) {
+                if ($("#hour").val() == "שעות" || $("#minute").val() == "דקות") {
+                    alert("השעה שנבחרה אינה חוקית");
+                    timeMatch = false;
+                }
             }
+            
 
 
-            //var atLeastOneIsChecked = $('input[name="selectEscort"]:checked').length > 0;
-            if ($("#onlyEscort").is(':checked')) {
+           // if ($("#onlyEscort").is(':checked')) {
                 var atLeastOneIsChecked = 0;
                 $('#selectEscort input:checked').each(function () {
                     atLeastOneIsChecked++;
                 });
-                if (atLeastOneIsChecked == 0) alert("בנסיעה למלווים בלבד, יש לבחור לפחות מלווה אחד");
-            }
+                if (atLeastOneIsChecked == 0) alert("יש לבחור לפחות מלווה אחד");
+          //  }
+
             if (!patientExists || !Origin || !Dest || !dateMatch || !timeMatch || atLeastOneIsChecked == 0) {
                 return false;
             } else return true;
@@ -1214,10 +1218,11 @@
                                         <div class="text-right m-b-30 m-r-15">
                                             <button type="button" onclick="returnRidePat()" class="btn btn-default waves-effect w-md m-b-5"><i class="ti-back-right m-r-5"></i>חזור</button>
                                         </div>
+                                        <p class="required">* שדה חובה</p>
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">שם החולה</label>
+                                                    <label class="col-sm-2 control-label">שם החולה&nbsp;<span class="required">*</span></label>
                                                     <div class="col-sm-6 ui-widget" id="selectPat">
                                                         <input type="text" id="pat" name="pat" class="form-control">
                                                     </div>
@@ -1239,7 +1244,7 @@
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">اسم المريض</label>
+                                                    <label class="col-sm-2 control-label">اسم المريض&nbsp;<span class="required">*</span></label>
                                                     <div class="col-sm-6 ui-widget" id="selectPat">
                                                         <input type="text" id="patArabic" name="patArabic" class="form-control"></input>
                                                     </div>
@@ -1247,7 +1252,7 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">מוצא</label>
+                                                    <label class="col-sm-2 control-label">מוצא&nbsp;<span class="required">*</span></label>
                                                     <div class="col-sm-6" id="selectOrigin">
                                                         <select id="Origin" name="Origin" class="form-control"><option>בחר מוצא</option></select>
                                                         <input id="dirBTN" type="button" value="שינוי כיוון" onclick="switchDir()" />
@@ -1259,14 +1264,14 @@
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
                                                 <div class="form-group" id="escortDiv">
-                                                    <label class="col-sm-2 control-label">מלווים</label>
+                                                    <label class="col-sm-2 control-label">מלווים&nbsp;<span class="required">*</span></label>
                                                     <div class="col-sm-6" id="selectEscort">
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">יעד</label>
+                                                    <label class="col-sm-2 control-label">יעד&nbsp;<span class="required">*</span></label>
                                                     <div class="col-sm-6" id="selectDestination">
                                                         <select id="Destination" name="Destination" class="form-control"><option>בחר יעד</option></select>
                                                     </div>
@@ -1296,7 +1301,7 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">שעת הסעה</label>
+                                                    <label class="col-sm-2 control-label">שעת הסעה&nbsp;<span class="required">*</span></label>
                                                     <div class="col-sm-6" id="selecthour">
                                                         <select id="minute" name="minute" class="form-control" style="width:20%;display:inline"><option>דקות</option></select>
                                                         <p style="display:inline;">:</p>
@@ -1320,7 +1325,7 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">תאריך הסעה </label>
+                                                    <label class="col-sm-2 control-label">תאריך הסעה&nbsp;<span class="required">*</span></label>
                                                     <div class="col-sm-6">
                                                         <input type="text" class="form-control" placeholder="dd/mm/yyyy" id="dateRide" name="dateRide">
                                                     </div>
