--- a/Road to Recovery/pages/escortedForm.html
+++ b/Road to Recovery/pages/escortedForm.html
@@ -519,7 +519,7 @@
                                                 <div class="form-group">
                                                     <label class="col-sm-3 control-label">טלפון ראשי&nbsp;<span class="required">*</span></label>
                                                     <div class="col-sm-6">
-                                                        <input id="phone1" name="phone1" type="text" class="form-control">
+                                                        <input id="phone1" name="phone1" type="text" class="form-control" placeholder="0xx-xxxxxxx או 0x-xxxxxxx">
                                                     </div>
                                                 </div>
                                             </div>
@@ -527,7 +527,7 @@
                                                 <div class="form-group">
                                                     <label class="col-sm-3 control-label">טלפון 2</label>
                                                     <div class="col-sm-6">
-                                                        <input id="phone2" name="phone2" type="text" class="form-control">
+                                                        <input id="phone2" name="phone2" type="text" class="form-control" placeholder="0xx-xxxxxxx או 0x-xxxxxxx">
                                                     </div>
                                                 </div>
                                             </div>
@@ -537,7 +537,7 @@
                                                 <div class="form-group">
                                                     <label class="col-sm-3 control-label">טלפון נוסף</label>
                                                     <div class="col-sm-6">
-                                                        <input id="HomePhone" name="HomePhone" type="text" class="form-control">
+                                                        <input id="HomePhone" name="HomePhone" type="text" class="form-control" placeholder="0xx-xxxxxxx או 0x-xxxxxxx">
                                                     </div>
                                                 </div>
                                             </div>
